--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1455,9 +1455,8 @@ ul.hidden-bullets {
               height: 2.125rem !important;
             }
             @include md{
-            top: calc(100% - 47px) !important;
-            height: calc(100% - 28px) !important;
-            left: calc(100% - 3.75rem);
+              right: 1rem !important;
+              top: 18px !important;
             }
             &.icon-search-line:before{
               content: '\e91d' !important;
