--- a/src/scss/brand/theme/_buttons.scss
+++ b/src/scss/brand/theme/_buttons.scss
@@ -130,3 +130,9 @@
     }
   }
 }
+.img-bottom-btn .btn.btn-pink {
+  @media screen and (max-width: 767px) {
+    max-width: 100%;
+    width: 100%; 
+  }
+}
