--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1444,41 +1444,41 @@ ul.hidden-bullets {
         }
         button.header-search {
           right: 0px !important;
-            position: absolute;
-            top: 2px !important;
-            width: 2.125rem !important;
-            background: $color-primary;
-            height: 1.875rem !important;
-            z-index: 1;
+          position: absolute;
+          top: 2px !important;
+          width: 2.125rem !important;
+          background: $color-primary;
+          height: 1.875rem !important;
+          z-index: 1;
+          display: block !important;
+          @include sm {
+            height: 2.125rem !important;
+          }
+          @include md {
+            right: 1rem !important;
+            top: 18px !important;
+          }
+          &.icon-search-line:before {
+            content: '\e91d' !important;
+            left: 0 !important;
+            right: 0;
+            font-size: 1.25rem !important;
+            top: 5px !important;
+            font-family: 'icomoon' !important;
             display: block !important;
-            @include sm{
-              height: 2.125rem !important;
-            }
-            @include md{
-              right: 1rem !important;
-              top: 18px !important;
-            }
-            &.icon-search-line:before{
-              content: '\e91d' !important;
-              left: 0 !important;
-              right: 0;
-              font-size: 1.25rem !important;
-              top: 5px !important;
-              font-family: 'icomoon' !important;
-              display: block !important;
-              z-index: -1 !important;
-            }
-            &:after{
-              content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: -2px;
-    height: 2.125rem;
-    background-color: var(--color-primary);
-    width: 2rem;
-    z-index: -1;
-            }
+            z-index: -1 !important;
+          }
+          &:after {
+            content: '';
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: -2px;
+            height: 2.125rem;
+            background-color: var(--color-primary);
+            width: 2rem;
+            z-index: -1;
+          }
         }
       }
     }
@@ -1487,21 +1487,47 @@ ul.hidden-bullets {
 
 /* Home Page Carouse */
 
-.home-carousel .carousel-slides .carousel-slide.active {
-  margin-left: 0;
+.half-slide-carousel .carousel-slides .carousel-slide{
+  background: transparent !important;
 }
-.home-carousel .carousel-slides .carousel-slide .carouselSlide {
-  background: #fff !important;
-  width: 80% !important;
-  margin-left: -15% !important;
-  box-shadow: 0px 20px 56px -10px rgba(0, 0, 0, 0.15);
-  @include sm {
-    width: 85% !important;
-    margin-left: -10% !important;
+
+.half-slide-carousel .carousel-slides .carousel-slide .carouselSlide {
+background: transparent;
+width: 85% !important;
+height: 100% !important;  
+margin-left: -10% !important;
+box-shadow: 0px 20px 56px -10px rgba(0, 0, 0, 0.15);
+}
+
+.half-slide-carousel .carousel-slides .carousel-slide.active .carouselSlide {
+margin-left: 0 !important;
+}
+
+.half-slide-carousel .carousel-slides .carousel-slide.active + .carousel-slide .carouselSlide{
+  margin-left: -5rem !important;
+  @include sm{
+      margin-left: -2rem !important;
   }
 }
-.home-carousel .carousel-slides .carousel-slide.active .carouselSlide {
-  margin-left: 0 !important;
+
+.half-slide-carousel .carousel-slides .carousel-slide.active + .carousel-slide + .carousel-slide .carouselSlide{
+  margin-left: -6rem !important;
+  @include sm{
+      margin-left: -4rem !important;
+  }
+}
+
+.half-slide-carousel .carousel-slides .carousel-slide.active + .carousel-slide + .carousel-slide + .carousel-slide .carouselSlide{
+  margin-left: -9rem !important;
+  @include sm{
+      margin-left: -6rem !important;
+  }
+}
+.half-slide-carousel .carousel-slides .carousel-slide.active + .carousel-slide + .carousel-slide + .carousel-slide + .carousel-slide .carouselSlide{
+  margin-left: -12rem !important;
+  @include sm{
+      margin-left: -8rem !important;
+  }
 }
 
 /* Home Page Carouse End */
