--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -571,6 +571,9 @@ header {
   .searchBox
   button {
   opacity: 1 !important;
+  @include md {
+    margin-left: 10px;
+  }
   &::before {
     content: 'Search';
     position: absolute;
