--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -570,7 +570,7 @@ header {
   button {
   opacity: 1 !important;
   @include md {
-    margin-left: 10px;
+    margin-left: 10px !important;
   }
   &::before {
     content: 'Search';
