--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -79,7 +79,10 @@
         }
 
         &.lSPrev {
-          right: 80px;
+          right: 66px;
+          @include xs {
+            right: 80px;
+          }
 
           &:after {
             content: '\e906';
