--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -20,7 +20,10 @@
     position: relative;
   }
   .story-image {
-    width: 40%;
+    width: 100%;
+    @include sm {
+      width: 40%;
+    }
     line-height: 0;
     img {
       height: 100%;
