--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -159,10 +159,12 @@
         span {
           font-size: 1rem;
           &::before {
-            font-family: 'icomoon';
-            font-style: normal;
             font-size: 1rem;
           }
+        }
+        &::before{
+          font-family: 'icomoon';
+          font-style: normal;
         }
         &:focus,
         &:hover {
