--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1451,7 +1451,7 @@ ul.hidden-bullets {
           position: absolute;
           top: 2px !important;
           width: 2.125rem !important;
-          background: $color-primary;
+          background-color: $color-primary;
           height: 1.875rem !important;
           z-index: 0;
           display: block !important;
