--- a/src/scss/brand/components/profile/_index.scss
+++ b/src/scss/brand/components/profile/_index.scss
@@ -35,7 +35,11 @@
     }
   }
 }
-
+.profile-card-content {
+  p {
+    color: $color-2;
+  }
+}
 .image-bg-strip {
   display: none;
   @include sm {
