--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1470,7 +1470,7 @@ ul.hidden-bullets {
             top: 5px !important;
             font-family: 'icomoon' !important;
             display: block !important;
-            z-index: 1 !important;
+            z-index: -1 !important;
           }
           &:after {
             content: '';
@@ -1589,3 +1589,21 @@ ul.hidden-bullets {
     }
   }
 }
+
+
+/* Careers search accordion */
+
+.career-search-wrapper{
+  .accordion{
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+      .accordion-slide{
+          &:before{
+              width: 100%;
+          }
+      }
+  }
+}
+
+/* Careers End */
