--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -1166,3 +1166,8 @@ li {
     font-size: $font-size-16;
   }
 }
+.megamenu .searchBox button {
+  @include md {
+    margin-left: 10px !important;
+  }
+}
