--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -103,6 +103,11 @@
     }
   }
 }
+.mobile-flex-column .story-block {
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+  }
+}
 .reference-story-block {
   width: 100%;
   @include md {
