--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -179,6 +179,9 @@
       margin-right: 2px;
       display: flex;
       align-items: center;
+      &.first {
+        white-space: nowrap;
+      }
       a {
         font-size: 14px;
         color: #fff;
