--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1590,20 +1590,25 @@ ul.hidden-bullets {
   }
 }
 
-
 /* Careers search accordion */
 
-.career-search-wrapper{
-  .accordion{
-      width: 80%;
-      margin-left: auto;
-      margin-right: auto;
-      .accordion-slide{
-          &:before{
-              width: 100%;
-          }
+.career-search-wrapper {
+  .accordion {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    .accordion-slide {
+      &:before {
+        width: 100%;
       }
+    }
   }
 }
 
 /* Careers End */
+
+.class-filter[data-type='dropdown'] .filter-container-js .filter-list-js{
+  @media screen and (max-width: 420px) {
+    left: auto;  
+  }
+}
