--- a/src/scss/brand/components/career-search/_index.scss
+++ b/src/scss/brand/components/career-search/_index.scss
@@ -3,10 +3,16 @@
 .career-search-wrapper {
   @include sm {
     position: absolute;
-    bottom: -73px;
+    bottom: -140px;
     left: 0;
     right: 0;
     z-index: 1;
+  }
+}
+
+.var-pad > div > div > .box:first-of-type {
+  @include sm {
+    margin-top: 4rem !important;
   }
 }
 
@@ -20,6 +26,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  align-items: flex-start !important;
   @include sm {
     flex-direction: row;
     justify-content: center;
