--- a/src/scss/brand/components/career-search/_index.scss
+++ b/src/scss/brand/components/career-search/_index.scss
@@ -10,12 +10,6 @@
   }
 }
 
-.var-pad > div > div > .box:first-of-type {
-  @include sm {
-    margin-top: 4rem !important;
-  }
-}
-
 .haleon-career-search-section {
   width: 100%;
   text-align: center;
@@ -26,11 +20,14 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  align-items: flex-start !important;
   @include sm {
     flex-direction: row;
     justify-content: center;
   }
+}
+
+.haleon-career-search-card .haleon-career-search-input-element {
+  align-items: flex-start !important;
 }
 
 .haleon-career-search-section .haleon-career-search-card button {
