--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1563,6 +1563,7 @@ ul.hidden-bullets {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: -2px !important;
+    border-bottom: 2px solid $color-2;
     @include sm {
       width: 80%;
     }
@@ -1571,13 +1572,35 @@ ul.hidden-bullets {
         width: 100%;
       }
     }
+    .accordion-container .accordion-slide .accordion-head .accordion-title {
+      width: 90%;
+    }
+    .accordion-container
+      .accordion-slide.is-active
+      .accordion-head
+      .accordion-title {
+      border-bottom: 1px solid $color-2;
+      padding-bottom: 10px;
+    }
+    .accordion-container .accordion-slide.is-active .accordion-content-wrapper {
+      @include sm {
+        height: 180px !important;
+        overflow-y: auto !important;
+      }
+      @include sd {
+        height: 250px !important;
+      }
+      @include md {
+        height: 300px !important;
+      }
+    }
   }
 }
 
 .var-pad {
-  padding-top: 1rem;
+  padding-top: 3rem;
   @include sm {
-    padding-top: 7rem;
+    padding-top: 11rem;
   }
 }
 
