--- a/src/scss/brand/components/section-with-bg/_index.scss
+++ b/src/scss/brand/components/section-with-bg/_index.scss
@@ -93,8 +93,7 @@
   .fit-content {
     .richText-content {
       width: fit-content !important;
-      margin-left: auto;
-      margin-right: auto;
+      margin-left: 0;
     }
   }
 }
