--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -153,12 +153,15 @@
         height: 100%;
         top: 100%;
         width: 120%;
-        left: -10%;
+        left: -10.75%;
 
         @include sm {
           height: 170px !important;
           left: -100vw;
           width: 100vw;
+        }
+        @include xs{
+          left: 10%;
         }
       }
 
