--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -121,15 +121,18 @@
   overflow: hidden;
   position: relative;
   cursor: pointer;
-
-  a:after {
-    content: '';
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    z-index: 1;
+ 
+  a{
+    color: $color-2 !important;
+    &:after {
+      content: '';
+      position: absolute;
+      width: 100vw;
+      height: 100vh;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
   }
 
   .image {
@@ -1207,7 +1210,10 @@
 
 .signs-to-look {
   margin-top: 1rem;
-
+h2{
+  color: $color-1;
+  text-align: center;
+}
   @include sm {
     margin-top: 4rem;
   }
