--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -85,6 +85,10 @@
     }
     img {
       height: 100%;
+      max-height: 200px;
+      @include sm{
+        max-height: 100%;
+      }
       object-fit: cover;
       object-position: top;
       @media screen and (max-width: 767px) {
