--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -246,12 +246,12 @@ table {
   th {
     padding: 0.5rem;
   }
-  &.equal-column{
-    td,
-  th {
-    width: 25%;
-  }
-  }
+}
+table.equal-column{
+  td,
+th {
+  width: 25%;
+}
 }
 .table-data-sticky {
   position: sticky;
