--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -164,9 +164,12 @@
 
       &:after {
         top: 0 !important;
-        right: -107vw;
+        right:-107.8vw;
         @include sm {
           right: -100vw;
+        }
+        @include xs{
+          right:-107.4vw;
         }
       }
     }
