--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -130,6 +130,12 @@ body {
     padding-left: 1.5rem !important;
   }
 }
+.m-m-x-negative--1 {
+  @media screen and (max-width: 767px) {
+    margin-left: -1rem;
+    margin-right: -1rem;
+  }
+}
 .bg-color-aqua {
   background-color: $color-secondary-aqua;
 }
