--- a/src/scss/brand/components/arrow-links/_index.scss
+++ b/src/scss/brand/components/arrow-links/_index.scss
@@ -8,7 +8,7 @@
     background-color: $color-primary;
     position: absolute;
     right: 0px;
-    bottom: -2px;
+    bottom: 0;
     width: 40px;
     line-height: 40px;
     color: $color-2;
