--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -139,8 +139,7 @@
       text-decoration: underline 2px solid $color-primary;
       &:focus {
         background: transparent !important;
-        border: 2px solid;
-        outline: none;
+        outline: 2px solid;
       }
     }
   }
