--- a/src/scss/brand/components/section-with-bg/_index.scss
+++ b/src/scss/brand/components/section-with-bg/_index.scss
@@ -85,7 +85,7 @@
   }
   .banner-over-content {
     margin-top: 1.5rem;
-    padding: 2rem 1rem;
+    padding: 2rem;
     @include sm {
       padding: 1rem 2rem;
       margin-top: 1rem;
