--- a/src/scss/brand/components/search-results/_index.scss
+++ b/src/scss/brand/components/search-results/_index.scss
@@ -34,6 +34,9 @@
       padding: 1rem !important;
       background-color: $color-grey-3;
       border: none !important;
+      &:focus{
+        outline: 2px dotted;
+      }
     }
   }
 }
