--- a/src/scss/brand/components/career-search/_index.scss
+++ b/src/scss/brand/components/career-search/_index.scss
@@ -51,6 +51,7 @@
   background: $color-white;
   box-shadow: $box-shadow;
   max-width: 100%;
+  border: 1px solid $color-2;
   @include sm {
     max-width: 80%;
   }
