--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -26,7 +26,7 @@ header {
   .megamenu--newco {
     padding: 0;
     > .component-content {
-      padding: 0 1.8rem !important;
+      padding: 0 1.5rem !important;
       @include sm {
         padding: 0 2rem !important;
       }
@@ -113,7 +113,7 @@ header {
               padding-right: 26px;
             }
             &:after {
-              content: '\e91a';
+              content: '\e920';
               font-family: 'icomoon';
               position: absolute;
               top: -1px;
@@ -251,8 +251,8 @@ header {
       .image {
         a {
           border: 4px solid $color-white;
-          width: 115px;
-          max-width: 115px;
+          width: 125px;
+          max-width: 125px;
           min-width: auto;
           margin-left: -0.75rem;
           margin-top: 6px;
@@ -312,7 +312,7 @@ header {
       }
       > .component-content > .navigation-mobile-menu {
         left: auto;
-        right: -15px;
+        right: 0px;
         background-image: none;
         width: 24px;
         height: 24px;
@@ -440,7 +440,7 @@ header {
         height: 24px !important;
         background-size: 24px !important;
         top: 12px !important;
-        right: 2rem !important;
+        right: 2.25rem !important;
         outline: 1px;
         background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/search-line.svg');
         position: fixed;
@@ -817,9 +817,15 @@ header {
     }
     .bg-color-3 {
       background-color: $color-grey-3;
-      padding: 1rem;
+      padding: 1.5rem;
       @include sd {
         padding: 0rem;
+      }
+      p {
+        margin-bottom: 1.5rem;
+        &:nth-last-child(1) {
+          margin-bottom: 0;
+        }
       }
     }
     .default-style {
@@ -843,11 +849,10 @@ header {
       }
       .btn.btn-black {
         color: $color-white !important;
-        background-color: $color-2 !important;
-        color: $color-2;
-        font-size: 0.938rem;
+        background-color: $color-2;
         line-height: $line-height-100;
-        margin-top: 1rem;
+        margin-top: 0rem;
+        margin-left: 0;
         &:hover {
           background-color: $color-3 !important;
         }
