--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1661,3 +1661,14 @@ ul.hidden-bullets {
 }
 
 /* Where we operate end */
+.green-icon:before {
+  content: '';
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background: $color-primary;
+  left: -5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
