--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1663,11 +1663,24 @@ ul.hidden-bullets {
 /* Where we operate end */
 .green-icon:before {
   position: absolute;
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   background: $color-primary;
-  left: -5rem;
+  left: -3rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  @include sm{
+    width: 60px;
+    height: 60px;
+    left: -5rem;
+    font-size: 2.5rem;
+  }
+}
+
+.p-m-r-4-5{
+  padding-left: 4.5rem !important;
+  @include sm{
+      padding-left: 0 !important;
+  }
 }
