--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -218,10 +218,13 @@
 
 .article-social-share {
   text-align: center;
-  p {
-    padding-left: 0px;
+  .component.col-lg-1 {
+    width: 100%;
+    p {
+      text-align: center;
+    }
     @include sm {
-      padding-left: 2px;
+      width: 48px;
     }
   }
   @include sm {
