--- a/src/scss/brand/components/section-with-bg/_index.scss
+++ b/src/scss/brand/components/section-with-bg/_index.scss
@@ -31,7 +31,7 @@
   > .component-content {
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 60% 350px;
+    /* background-position: 60% 350px; */
     background-color: #595a5c;
     padding: 1rem 0rem 0rem;
     overflow: hidden;
