--- a/src/scss/brand/components/card-text-image/_index.scss
+++ b/src/scss/brand/components/card-text-image/_index.scss
@@ -18,6 +18,9 @@
       width: 100%;
       object-fit: cover;
       max-height: 180px;
+      @include sm {
+        max-height: initial;
+      }
     }
 
     &.card-image-with-link {
