--- a/src/scss/brand/components/positioned-banner-wrapper/_index.scss
+++ b/src/scss/brand/components/positioned-banner-wrapper/_index.scss
@@ -38,6 +38,7 @@
     margin-bottom: 5rem;
     @include sm {
       margin-bottom: 3rem;
+      margin-top: 3rem;
     }
     .banner-text {
       @include sm {
