--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -893,8 +893,9 @@ header {
   > .paragraphSystem
   .searchBox
   input[type='text'] {
-  padding-right: 0rem;
   text-align: left;
+  padding: 0 0 0 1rem;
+  height: 35px;
   @include md {
     width: calc(100% - 2.2rem) !important;
   }
@@ -1194,7 +1195,7 @@ li {
           top: 2px !important;
           width: 34px !important;
           background-color: $color-primary;
-          height: 1.875rem !important;
+          height: 31px !important;
           z-index: 0;
           display: block !important;
           @include sm {
