--- a/src/scss/brand/components/image-card/_index.scss
+++ b/src/scss/brand/components/image-card/_index.scss
@@ -2,10 +2,19 @@
   position: relative;
   .card-content {
     position: absolute;
-    top: 0;
-    padding: 2rem;
+    bottom: 0;
+    padding: 1rem;
     color: $color-2;
     z-index: 999;
+    background: rgb(255 255 255 / 60%);
+    p {
+      margin-bottom: 0;
+    }
+    @include sm {
+      top: 0;
+      bottom: initial;
+      padding: 2rem;
+    }
   }
   .overlapping-text {
     position: absolute;
