--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1742,3 +1742,10 @@ ul.hidden-bullets {
 }
 
 /* Breadcrumb css End */
+
+.contact-details{
+  margin-top: 1rem;
+  @include sd{
+    margin-top: 0;
+  }
+}
