--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -457,7 +457,7 @@ header {
         }
         &:hover {
           &:after {
-            display: block;
+            display: none;
             @media only screen and (max-width: 991px) {
               display: none;
             }
@@ -893,11 +893,10 @@ header {
   > .paragraphSystem
   .searchBox
   input[type='text'] {
+  padding-right: 0rem;
   text-align: left;
-  padding: 0 0 0 1rem;
-  height: 35px;
   @include md {
-    width: calc(100% - 1rem) !important;
+    width: calc(100% - 2.2rem) !important;
   }
 }
 
@@ -1195,17 +1194,24 @@ li {
           top: 2px !important;
           width: 34px !important;
           background-color: $color-primary;
-          height: 31px !important;
+          height: 1.875rem !important;
           z-index: 0;
-          display: none !important;
+          display: block !important;
           @include sm {
-            height: 90% !important;
+            height: 34px !important;
+            right: 0 !important;
+            top: 2px !important;
           }
-          @include md {
-            right: 12px !important;
+          @include sd {
+            right: 15px !important;
             top: 18px !important;
-            height: 35px !important;
           }
+          /* @include md {
+            right: 15px !important;
+            top: 18px !important;
+            height: 34px !important;
+          } */
+
           &.icon-search-line:before {
             content: '\e91d' !important;
             left: 0 !important;
