--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -85,11 +85,15 @@
     }
     img {
       height: 100%;
+      object-fit: cover;
+      object-position: top;
+      max-height: 180px;
       @include sm {
         max-height: 100%;
       }
-      object-fit: cover;
-      object-position: top;
+      @include md {
+        max-height: initial;
+      }
     }
   }
 }
