--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -256,10 +256,10 @@ header {
           min-width: auto;
           margin-left: -0.75rem;
           margin-top: 13px;
-          @include sd {
-            width: 250px;
-            min-width: 250px;
-            max-width: 250px;
+          @include md {
+            width: 200px;
+            min-width: 200px;
+            max-width: 200px;
             height: auto;
             margin: 0;
             margin-bottom: 2px;
@@ -296,11 +296,6 @@ header {
         img {
           width: auto;
         }
-      }
-      > .component-content .image a {
-        max-width: 250px;
-        min-width: 250px;
-        width: 250px;
       }
     }
   }
