--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -250,7 +250,7 @@ header {
     .megamenu-logo {
       .image {
         a {
-          border: 4px solid $color-white;
+          // border: 4px solid $color-white;
           width: 125px;
           max-width: 125px;
           min-width: auto;
@@ -262,7 +262,7 @@ header {
             max-width: 200px;
             height: auto;
             margin: 0;
-            margin-bottom: 3px;
+            margin-bottom: 2px;
           }
           &:hover {
             height: auto;
