--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -192,6 +192,12 @@
         margin-top: 2px;
       }
     }
+   @include sm{
+    padding-left: 5px;
+   } 
+   @include md{
+    padding-left: 0;
+   }
   }
 }
 #footer {
