--- a/src/scss/default/theme/common-framework-overrides/_index.scss
+++ b/src/scss/default/theme/common-framework-overrides/_index.scss
@@ -43,7 +43,7 @@ img {
 }
 
 #content {
-  margin-top: $space-50;
+  margin-top: 65px;
 
   @media (min-width: $breakpoint-md-min) {
     margin-top: 0;
