--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -78,7 +78,7 @@
     justify-content: center;
     width: -webkit-fill-available;
     @include sm {
-      justify-content: flex-end
+      justify-content: flex-end;
     }
     .icons-with-link {
       margin: $share-icon-spacing;
