--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -453,7 +453,7 @@ header {
         }
         &:hover {
           &:after {
-            display: none;
+            display: block;
             @media only screen and (max-width: 991px) {
               display: none;
             }
@@ -1239,5 +1239,15 @@ li {
         }
       }
     }
+  }
+}
+
+.megamenu
+  .megamenu-search
+  .searchBox
+  .searchBox-label
+  button.header-search:hover {
+  &:after {
+    display: none !important;
   }
 }
